--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ if ( lettervalue < 30 && lettervalue > 0 ) {
 document.getElementById("container").innerHTML = letters[lettervalue-1];
 }
 else {
-    alert("Lütfen 1 den 29 a kadar bir sayı giriniz. ( 1 ve 29 dahil ) ")
+    alert("Please enter a number from 1 to 29 ( includes 1 and 29 ) ")
 }
 
 }
